tests/compile-fail/derive_enum_multi_variant_errors.stderr
error: StackError requires a Location field. Use #[suzunari_error] to auto-inject, or add a field of type Location manually.
 --> tests/compile-fail/derive_enum_multi_variant_errors.rs:8:14
  |
8 |     VariantA { msg: String },
  |              ^^^^^^^^^^^^^^^

error: StackError requires a Location field. Use #[suzunari_error] to auto-inject, or add a field of type Location manually.
  --> tests/compile-fail/derive_enum_multi_variant_errors.rs:10:14
   |
10 |     VariantB { ctx: String },
   |              ^^^^^^^^^^^^^^^
